<resources>
    <string name="app_name">My PlantApp</string>
    <string name="plant_app">Klasifikasi Tanaman</string>
    <string name="add_information">mendeteksi tanaman dan manfaatnya melalui daun</string>
    <string name="btn_galery">Galery</string>
    <string name="btncamera">Camera</string>
    <string name="predict">Scan</string>
    <string name="hasil">Hasil Prediksi : </string>
    <string name="hasil_kurang">akurasi kurang</string>
    <string name="not_identification">tidak teridentifikasi</string>
    <string name="nama_botani_jambubiji">Psidium guajava</string>
    <string name="karakteristik_jenistumbuhan_jambubiji">Pohon</string>
    <string name="karakteristik_ketinggian_jambubiji">8 sampai 13 m</string>
    <string name="karakteristik_waktupanen_jambubiji">musim panas</string>
    <string name="karakteristik_warnabuah_jambubiji">hijau kekuningan</string>
    <string name="klasifikasi_marga_jambubiji">Psidium</string>
    <string name="klasifikasi_keluarga_jambubiji">Myrtaceae</string>
    <string name="klasifikasi_kelas_jambubiji">Magnoliopsida</string>
    <string name="klasifikasi_divisi_jambubiji">Tracheophyta</string>
    <string name="perubahan_jambubiji_detail">jambu biji merupakan tanaman yang bisa untuk mengobati diare, Menurunkan kolesterol, menstabilkan tekanan darah, membantu penyembuhan demam berdarah, mengatasi perut kembung, menangkal radikal bebas </string>
    <string name="cara_pemanfaatan_jambubiji">Cuci 5–10 daun jambu biji segar di bawah air dingin untuk menghilangkan kotoran atau residu. Rebus 2 gelas (475 mL) air di atas kompor, lalu tambahkan daunnya. Kecilkan api dan didihkan selama 10–12 menit. Angkat dari api dan tuangkan cairan ke dalam saringan di atas cangkir atau mangkuk lebar.</string>
    <string name="perubahan_kari">Kari</string>
    <string name="nama_botani_kari">Murraya koenigii</string>
    <string name="karakteristik_jenistumbuhan_kari">Pohon</string>
    <string name="karakteristik_ketinggian_kari">4 sampai 8 m</string>
    <string name="karakteristik_waktupanen_kari">musim panas</string>
    <string name="karakteristik_warnabuah_kari">coklat tua</string>
    <string name="klasifikasi_marga_kari">Murraya</string>
    <string name="klasifikasi_keluarga_kari">Rutataceae</string>
    <string name="klasifikasi_kelas_kari">Magnoliopsida</string>
    <string name="klasifikasi_divisi_kari">Tracheophyta</string>
    <string name="cara_pemanfaatan_kari">Anda cukup merebus 10 lembar sampai 20 lembar daun kari sampai mendidih, Anda saring rebusan daun kari dan tambahkan sedikit madu dan perasan lemon untuk menambah rasa. Anda sebaiknya minum teh daun kari pagi hari saat perut kosong.</string>
    <string name="perubahan_kari_detail">tanaman kari bermanfaat untuk meredakan gejala rematik, membantu penyembuhan luka, serta mengurangi risiko penyakit jantung, kanker, dan diabetes</string>
    <string name="perubahan_kemangi">kemangi</string>
    <string name="nama_botani_kemangi">Ocimum basilicum</string>
    <string name="karakteristik_jenistumbuhan_kemangi">jamu</string>
    <string name="karakteristik_ketinggian_kemangi">20 sampai 150 cm</string>
    <string name="karakteristik_waktupanen_kemangi">-</string>
    <string name="karakteristik_warnabuah_kemangi">-</string>
    <string name="klasifikasi_marga_kemangi">Ocimum</string>
    <string name="klasifikasi_keluarga_kemangi">Lamiaceae</string>
    <string name="klasifikasi_kelas_kemangi">Magnoliopsida</string>
    <string name="klasifikasi_divisi_kemangi">Tracheophyta</string>
    <string name="cara_pemanfaatan_kemangi">Ambil segenggam daun kemangi segar, lalu blender dan tambahkan air panas. Tunggu sampai air menjadi hangat, kemudian tambahkan 1 sdm madu dan aduk sampai merata. Minumlah jus daun kemangi ini selagi hangat 1 kali sehari. Jika tidak suka rasanya, daun ini bisa dicampur dengan bahan lain.</string>
    <string name="perubahan_kemangi_detail">daun kemangi banyak dimanfaatkan sebagai pelengkap masakan. bermanfaat untuk meningkatkan sistem imun, meredakan batuk, mencegah demam</string>
    <string name="perubahan_kunyit">kunyit</string>
    <string name="nama_botani_kunyit">Curcuma longa</string>
    <string name="karakteristik_jenistumbuhan_kunyit">jamu</string>
    <string name="karakteristik_ketinggian_kunyit">20 sampai 150 cm</string>
    <string name="karakteristik_waktupanen_kunyit">Musim panas</string>
    <string name="karakteristik_warnabuah_kunyit">Coklat</string>
    <string name="klasifikasi_marga_kunyit">Curcuma</string>
    <string name="klasifikasi_keluarga_kunyit">Zingiberales</string>
    <string name="klasifikasi_kelas_kunyit">Liliopsida</string>
    <string name="klasifikasi_divisi_kunyit">Tracheophyta</string>
    <string name="cara_pemanfaatan_kunyit">Untuk mendapatkan manfaat daun kunyit, Anda bisa menggunakannya sebagai pelengkap bumbu masak. Beberapa makanan yang sering memanfaatkan daun kunyit sebagai penyedap adalah gulai, rendang, dan kare. Selain berfungsi sebagai penyedap, daun kunyit juga bisa dijadikan sebagai pengawet makanan.</string>
    <string name="perubahan_kunyit_detail">Kunyit mempunyai khasiat sebagai obat tradisional, mempunyai peranan sebagai antioksidan, antitumor, antikanker, antiracun</string>
    <string name="perubahan_mint">mint</string>
    <string name="nama_botani_mint">Mentha canadensis</string>
    <string name="karakteristik_jenistumbuhan_mint">jamu</string>
    <string name="karakteristik_ketinggian_mint">50 sampai 100 cm</string>
    <string name="karakteristik_waktupanen_mint">Sepanjang tahun</string>
    <string name="karakteristik_warnabuah_mint">Coklat</string>
    <string name="klasifikasi_marga_mint">Mentha</string>
    <string name="klasifikasi_keluarga_mint">Lamiaceae</string>
    <string name="klasifikasi_kelas_mint">Magnoliopsida</string>
    <string name="klasifikasi_divisi_mint">Tracheophyta</string>
    <string name="cara_pemanfaatan_mint">Caranya, Anda masukkan lima sampai enam lembar daun mint ke dalam sebotol air dan diamkan semalaman. Anda minum air daun mint tersebut keesokan harinya. Kedua, Anda bisa mengonsumsi daun mint dalam bentuk teh. Anda seduh daun mint kering dengan air mendidih dan biarkan selama 8–10 menit.</string>
    <string name="perubahan_mint_detail">Mentha canadensis adalah satu-satunya mint yang secara eksklusif berasal dari Amerika Utara. Dapat tumbuh dengan baik ditanah yang jenuh. Kandungan dalam daun mint memiliki banyak vitamin A, hal ini baik untuk kesehatan mata. juga dapat mempercepat proses penyembuhan flu</string>
    <string name="perubahan_pepaya">pepaya</string>
    <string name="nama_botani_pepaya">Carica papaya</string>
    <string name="karakteristik_jenistumbuhan_pepaya">pohon</string>
    <string name="karakteristik_ketinggian_pepaya">2 sampai 4 m</string>
    <string name="karakteristik_waktupanen_pepaya">Sepanjang tahun</string>
    <string name="karakteristik_warnabuah_pepaya">kuning, orange, hijau</string>
    <string name="klasifikasi_marga_pepaya">Carica</string>
    <string name="klasifikasi_keluarga_pepaya">Caricaceae</string>
    <string name="klasifikasi_kelas_pepaya">Magnoliopsida</string>
    <string name="klasifikasi_divisi_pepaya">Tracheophyta</string>
    <string name="cara_pemanfaatan_pepaya">Cara mengolah daun pepaya menjadi minuman pereda nyeri haid adalah ambil satu lembar daun pepaya, sejumput garam, dan asam jawa. Campurkan ke dalam segelas air dan rebus hingga mendidih. Konsumsi jus daun pepaya secara rutin bisa membantu mencegah terjangkit penyakit malaria.</string>
    <string name="perubahan_pepaya_detail">daun pepaya bermanfaat untuk menyeimbangkan gula darah, mendukung fungsi pencernaan, menyuburkan rambut</string>
    <string name="perubahan_sirih">sirih</string>
    <string name="nama_botani_sirih">Piper betle</string>
    <string name="karakteristik_jenistumbuhan_sirih">renek</string>
    <string name="karakteristik_ketinggian_sirih">90 cm</string>
    <string name="karakteristik_waktupanen_sirih">-</string>
    <string name="karakteristik_warnabuah_sirih">-</string>
    <string name="klasifikasi_marga_sirih">Piper</string>
    <string name="klasifikasi_keluarga_sirih">Piperceae</string>
    <string name="klasifikasi_kelas_sirih">Magnoliopsida</string>
    <string name="klasifikasi_divisi_sirih">Tracheophyta</string>
    <string name="cara_pemanfaatan_sirih">Dalam mengonsumsinya, daun sirih bisa direbus dan diminum air rendamannya, atau dikunyah begitu saja untuk diambil minyaknya. Dilansir dari Netmeds, banyak sekali khasiat kesehatan yang terkandung dalam selembar daun sirih. Kandungan daun sirih sangat banyak.</string>
    <string name="perubahan_sirih_detail">daun sirih dapat dimanfaatkan untuk menjaga kesehatan gigi dan mulut, mempercepat penyembuhan luka</string>
    <string name="perubahan_sirsak">sirsak</string>
    <string name="nama_botani_sirsak">Annona mucirata</string>
    <string name="karakteristik_jenistumbuhan_sirsak">pohon</string>
    <string name="karakteristik_ketinggian_sirsak">4 m</string>
    <string name="karakteristik_waktupanen_sirsak">musim panas</string>
    <string name="karakteristik_warnabuah_sirsak">hijau</string>
    <string name="klasifikasi_marga_sirsak">Annona</string>
    <string name="klasifikasi_keluarga_sirsak">Annonaceae</string>
    <string name="klasifikasi_kelas_sirsak">Magnoliopsida</string>
    <string name="klasifikasi_divisi_sirsak">Tracheophyta</string>
    <string name="cara_pemanfaatan_sirsak">Cara menggunakannya, rebus 6–10 lembar daun sirsak yang sudah tua tapi masih hijau. Sebelumnya, cuci bersih dulu daun tersebut. Ekstrak air daun sirsak menjadi 1 gelas, lalu diminum. Minum ramuan ini pagi dan sore hari untuk mendapatkan hasil maksimal.</string>
    <string name="perubahan_sirsak_detail">daun sirsak bermanfaat untuk mengobati asam urat, mengobati kanker, menstabilkan tekanan darah</string>
    <string name="perubahan_lidahbuaya">lidah buaya</string>
    <string name="nama_botani_lidahbuaya">Aloe vera var. chinensis</string>
    <string name="karakteristik_jenistumbuhan_lidahbuaya">sukulen, jamu</string>
    <string name="karakteristik_ketinggian_lidahbuaya">30 sampai 60 cm</string>
    <string name="karakteristik_waktupanen_lidahbuaya">awalmusim panas</string>
    <string name="karakteristik_warnabuah_lidahbuaya">-</string>
    <string name="klasifikasi_marga_lidahbuaya">Annona</string>
    <string name="contem_des_1">cara scan daun agar mendapatkan hasil yang maksimal</string>
    <string name="btn_onb_1_lanjut">Lanjut</string>
    <string name="contem_des_2">Tampilan hasil scan tanaman</string>
    <string name="detail">Penjelasan dan Manfaat :</string>
    <string name="akurasi">Confidence :</string>
    <string name="nama_tanaman">Nama tanaman</string>
    <string-array name="nama_latin">
        <item>Psidium guajava</item>
        <item>Murraya koenigii</item>
        <item>Ocimum basilicum</item>
        <item>Curcuma longa</item>
        <item>Mentha × piperita</item>
        <item>Carica papaya</item>
        <item>Piper betle</item>
        <item>Annona muricata</item>
        <item>Aloe vera</item>
        <item>Camellia sinensis</item>
    </string-array>
    <string name="informasi_tanaman">Informasi tanaman</string>
    <string name="nama_botani">Nama Botani :</string>
    <string name="karakteristik">Karakteristik :</string>
    <string name="klasifikasi_ilmiah">Klasifikasi Ilmiah</string>
    <string name="cara_pemanfaatan">Cara Pemanfaatan</string>
    <string name="ketinggian_tumbuhan">Ketinggian Tumbuhan</string>
    <string name="divisi">divisi</string>
    <string name="kelas">kelas</string>
    <string name="keluarga">keluarga</string>
    <string name="marga">marga</string>
    <string name="warna_buah">warna buah</string>
    <string name="waktu_panen_buah">waktu panen buah</string>
    <string name="jenis_tanaman">Jenis Tanaman</string>
    <string name="gambar_lain">Gambar</string>
</resources>