<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_app"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/black50"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_information"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/insert_image_bg"
            android:padding="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_galery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:background="@drawable/btn_galery"
                android:padding="10dp"
                android:text="@string/btn_galery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsregular"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@drawable/btn_galery"
                android:text="@string/btncamera"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsregular"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predict"
            android:textAllCaps="false"
            android:background="@drawable/btn_scan"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsregular"/>

        <TextView
            android:id="@+id/tv_resultkurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textSize="15sp"
            android:textColor="@color/black50"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hasil"
            android:textColor="@color/black50"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:id="@+id/tv_akurasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akurasi"
            android:textSize="15sp"
            android:textColor="@color/black50"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:id="@+id/tv_confidence"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_botani"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:id="@+id/tv_namabotani"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsitalic"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karakteristik"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/jenis_tanaman"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_jenistanaman"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/ketinggian_tumbuhan"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_ketinggian"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/waktu_panen_buah"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_panen"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/warna_buah"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_warna_buah"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/klasifikasi_ilmiah"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/marga"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_klasifikasi_marga"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/keluarga"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_klasifikasi_keluarga"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/kelas"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_klasifikasi_kelas"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/divisi"
                android:fontFamily="@font/poppinsregular"/>

            <TextView
                android:id="@+id/tv_klasifikasi_divisi"
                android:textSize="14sp"
                android:textColor="@color/black50"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:id="@+id/tv_detail"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cara_pemanfaatan"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:id="@+id/tv_cara_pemanfaatan"
            android:textSize="16sp"
            android:contentDescription="@string/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsregular"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gambar_lain"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black50"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"/>

        <ImageView
            android:id="@+id/iv_buah"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>