<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black50"
        app:layout_constraintCircleRadius="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_detail_namatanaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppinsbold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black50"
        android:text="@string/nama_tanaman"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_detailnamalatin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_latin"
        android:fontFamily="@font/poppinsitalic"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_namatanaman"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_namatanaman" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/informasi_tanaman"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black50"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_detailnamalatin"
        app:layout_constraintTop_toBottomOf="@+id/tv_detailnamalatin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_informasi_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/perubahan_jambubiji_detail"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_informasi_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/perubahan_jambubiji_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_informasi_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_informasi_1" />

</androidx.constraintlayout.widget.ConstraintLayout>